--- a/src/components/navigation/navigation.module.scss
+++ b/src/components/navigation/navigation.module.scss
@@ -18,7 +18,6 @@
   --mobile-menu-background-color: var(--color-white);
   --mobile-menu-color: var(--color-black-90);
   --navigation-row-background-color: var(--color-white);
-  --navigation-row-color: var(--color-metro);
   --navigation-row-focus-outline-color: var(--color-coat-of-arms);
   margin: 0 auto;
   width: 100%;
@@ -51,7 +50,7 @@
     }
 
     @media (min-width: $breakpoint-m) {
-      &:hover {
+      &:hover, &:focus {
         text-decoration: underline;
       }
 
@@ -67,7 +66,7 @@
         transition: width 0.2s;
       }
 
-      &:hover::before, &[aria-current]::before {
+      &:hover::before, &:focus::before, &[aria-current]::before {
         width: var(--spacing-3-xs);
       }
     }
