--- a/src/components/navigation/navigation.module.scss
+++ b/src/components/navigation/navigation.module.scss
@@ -14,7 +14,7 @@
   --header-background-color: var(--color-white);
   --header-color: var(--color-black-90);
   --header-divider-color: var(--color-black-20);
-  --header-focus-outline-color: var(--color-black);
+  --header-focus-outline-color: var(--color-black-90) !important;
   --mobile-menu-background-color: var(--color-white);
   --mobile-menu-color: var(--color-black-90);
   --navigation-row-background-color: var(--color-white);
