--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -7,4 +7,12 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  @media print {
+    nav,
+    header,
+    .sidebar {
+      display: none;
+    }
+  }
 }
