--- a/src/components/navigation/navigation.module.scss
+++ b/src/components/navigation/navigation.module.scss
@@ -184,11 +184,7 @@
 .breadcrumb {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 var(--spacing-m);
-  margin: 0 auto;
   width: 100%;
-  max-width: var(--breakpoint-xl);
-  border-top: 1px solid var(--color-black-10);
   min-height: var(--spacing-3-xl);
 }
 
@@ -208,6 +204,21 @@
   }
 }
 
+.subHeader {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: var(--breakpoint-xl);
+  margin: 0 auto;
+  padding: 0 var(--spacing-m);
+  width: 100%;
+  border-top: 1px solid var(--color-black-10);
+
+  @media (min-width: $breakpoint-m) {
+    flex-wrap: nowrap;
+  }
+}
+
 @media (min-width: $breakpoint-s) {
   .breadcrumbElement {
     height: var(--spacing-3-xl);
@@ -216,6 +227,11 @@
 
 .footer {
   --footer-background: var(--color-black) !important;
+
+  @media print {
+    display: none;
+  }
+  
   nav {
     @media (min-width: $breakpoint-m) {
       display: grid !important;
