THF-442: Updated printing layout.

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -551,7 +551,7 @@ h5, .h5,
     margin-top: 0 !important;
   }
 
-  .block-text,
+  .block-text p,
   table, 
   img, 
   svg {
@@ -604,5 +604,8 @@ h5, .h5,
     }
   } 
 
+  [class*="Accordion-module_contentWithCloseButton"] {
+    padding-bottom: 0 !important;
+  }
 }
 
