THF-442: Hide graphics on printing

--- a/src/components/banner/banner.module.scss
+++ b/src/components/banner/banner.module.scss
@@ -17,7 +17,8 @@
     margin-bottom: var(--spacing-s);
 
     @media print {
-      print-color-adjust: exact;
+      display: none;
+      margin: 0;
     }    
   }
 
