--- a/src/components/events/events.module.scss
+++ b/src/components/events/events.module.scss
@@ -14,6 +14,10 @@
   .tags {
     margin-top: -1.5rem;
   }
+
+  [class*="Linkbox-module_withBorder"]:focus-within {
+    outline-color: var(--color-black-90);
+  }
 }
 
 .eventListTitleArea {
@@ -106,6 +110,7 @@
   padding: 0 var(--spacing-3-xs) 0 0;
 
   .filterTag {
+    --focus-outline-color: var(--color-black-90);
     background-color: var(--color-suomenlinna-medium-light);
     border: none;
     color: var(--color-black-90);
@@ -159,6 +164,11 @@ ul.tags {
   display: flex;
   justify-content: center;
   padding-top: var(--spacing-l);
+
+  > button {
+    --border-color-focus: var(--color-black-90);
+    --border-color-hover-focus: var(--color-black-90);
+  }
 }
 
 @media (min-width: $breakpoint-s) {
