--- a/src/components/consentInfo/consentInfo.module.scss
+++ b/src/components/consentInfo/consentInfo.module.scss
@@ -2,7 +2,7 @@
   margin: var(--spacing-s);
   padding: var(--spacing-s);
   background-color: var(--color-black-5);
-  
+
   h3 {
     display: flex;
     margin-top: 0;
@@ -10,5 +10,13 @@
     svg {
       margin: auto var(--spacing-2-xs) auto 0;
     }
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  button {
+    --focus-outline-color: var(--color-black-90);
   }
 }
