--- a/src/components/navigation/navigation.module.scss
+++ b/src/components/navigation/navigation.module.scss
@@ -41,21 +41,21 @@
   display: none;
 
   [class*="button_hds-button"] {
-    --background-color: var(--color-bus);
-    --background-color-hover: var(--color-bus);
-    --background-color-focus: var(--color-bus);
-    --background-color-hover-focus: var(--color-bus);
-    --background-color-disabled: var(--color-black-20);
-    --border-color: var(--color-bus);
-    --border-color-hover: var(--color-bus);
-    --border-color-focus: var(--color-bus);
-    --border-color-hover-focus: var(--color-bus);
-    --border-color-disabled: var(--color-black-20);
-    --color: var(--color-white);
-    --color-hover: var(--color-white);
-    --color-focus: var(--color-white);
-    --color-hover-focus: var(--color-white);
-    --color-disabled: var(--color-white);
+    --background-color: var(--color-bus) !important;
+    --background-color-hover: var(--color-bus) !important;
+    --background-color-focus: var(--color-bus) !important;
+    --background-color-hover-focus: var(--color-bus) !important;
+    --background-color-disabled: var(--color-black-20) !important;
+    --border-color: var(--color-bus) !important;
+    --border-color-hover: var(--color-bus) !important;
+    --border-color-focus: var(--color-bus) !important;
+    --border-color-hover-focus: var(--color-bus) !important;
+    --border-color-disabled: var(--color-black-20) !important;
+    --color: var(--color-white) !important;
+    --color-hover: var(--color-white) !important;
+    --color-focus: var(--color-white) !important;
+    --color-hover-focus: var(--color-white) !important;
+    --color-disabled: var(--color-white) !important;
   }
 }
 
