--- a/src/components/navigation/navigation.module.scss
+++ b/src/components/navigation/navigation.module.scss
@@ -51,11 +51,11 @@
     --border-color-focus: var(--color-bus) !important;
     --border-color-hover-focus: var(--color-bus) !important;
     --border-color-disabled: var(--color-black-20) !important;
-    --color: var(--color-white) !important;
-    --color-hover: var(--color-white) !important;
-    --color-focus: var(--color-white) !important;
-    --color-hover-focus: var(--color-white) !important;
-    --color-disabled: var(--color-white) !important;
+    --color: var(--color-white);
+    --color-hover: var(--color-white);
+    --color-focus: var(--color-white);
+    --color-hover-focus: var(--color-white);
+    --color-disabled: var(--color-white);
   }
 }
 
